MCA App/Release/MCA Demo org/src/objects/Submission_Mails_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Bcc_Address__c</fullName>
        <label>Bcc Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <inlineHelpText>This field hold the url/path of image which user want to show on the mail body.</inlineHelpText>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Body__c</fullName>
        <label>Message Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Submission Email Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mail Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Email Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>